# phy-drivers

./: CMakeLists.txt  README.md
inc/: 88q211x.h  dp83867.h  lan867x.h  phy_common.h  phy_mdio.h  phy_platform.h
inc/Internal/: phy_utils.h
inc/Internal/88q211x/: 88q211x_bist.h  88q211x_init.h  88q211x_regs.h
inc/Internal/dp83867/: dp83867_init.h  dp83867_regs.h
inc/Internal/lan867x/: lan867x_init.h  lan867x_regs.h
inc/internal/: phy_io.h  phy_utils.h
inc/internal/88q211x/: 88q211x_ptp.h  88q211x_regs.h  88q211x_xmii.h
inc/internal/dp83867/: dp83867_init.h  dp83867_ptp.h  dp83867_regs.h
inc/internal/lan867x/: lan867x_regs.h
src/: phy_common.c  phy_io.c  phy_mdio.c  phy_utils.c
src/88q211x/: 88q211x.c  88q211x_bist.c  88q211x_init.c  88q211x_ptp.c  88q211x_xmii.c
src/dp83867/: dp83867.c  dp83867_init.c  dp83867_ptp.c
src/lan867x/: lan867x.c  lan867x_init.c
src/platform/: stm32.c
